--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.7",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "node-fetch": "3.3.1"
   }
 }
